--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,11 +13,12 @@ import "../styles/global.css";
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>AJKPSC | Public Service Commision of AJK</title>
   </head>
   <body>
+    
     <slot />
   </body>
 </html>
