--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Navbar from '../components/Navbar.astro';
+import TopBar from '../components/TopBar.astro';
 import Layout from '../layouts/Layout.astro';
 
 ---
 
 <Layout>
-	<Navbar />
+	<TopBar/>
+	 <Navbar />
 </Layout>
