--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Chairperson from '../components/Chairperson.astro';
 import Navbar from '../components/Navbar.astro';
 import TopBar from '../components/TopBar.astro';
 import Layout from '../layouts/Layout.astro';
@@ -8,4 +9,5 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<TopBar/>
 	 <Navbar />
+	 <Chairperson />
 </Layout>
