--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import "../styles/global.css";
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="f3zA7ibAQ5iBDjxYYCsYL6mhPF9dMmV5ZcOY2wJE-bM" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
