--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -137,13 +137,9 @@ let isMobileMenuOpen = false;
       <button
         class="px-4 py-2 text-white cursor-pointer bg-green-600 hover:bg-green-700 rounded-md transition-colors"
       >
-        Sign In
+        Apply Now
       </button>
-      <button
-        class="px-4 py-2 cursor-pointer bg-gray-100 hover:bg-gray-300 border border-gray-800 rounded-md transition-colors"
-      >
-        Register
-      </button>
+      
     </div>
 
     <button
